adicionando novas seçoes, fadein e resposividade

--- a/src/styles/components/infosbar.scss
+++ b/src/styles/components/infosbar.scss
@@ -1,6 +1,8 @@
+@use 'variables';
+
 .infos-bar {
     padding: 16px 24px;
-    background-color: #fff;
+    background-color: variables.$textColor;
     display: flex;
     justify-content: space-between;
     &__infos {
@@ -9,10 +11,10 @@
 
         &__item {
             font-size: 14px;
-            color: #000;
+            color: variables.$secundaryTextColor;
 
             b {
-                color: #000;
+                color: variables.$secundaryTextColor;
                 font-size: 18px;  
                 display: block;
             }
