--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .button {
     padding: 12px;
     font-size: 18px;
@@ -8,7 +10,7 @@
 
     &--primary {
         color: #fff;
-        background-color: #4f2ac3;
+        background-color: variables.$purple;
     }
 
     @media (max-width: 640px) {
